--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -20,12 +21,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -39,5 +43,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "3.2.2",
+    "@storybook/addon-essentials": "8.4.3",
+    "@storybook/addon-interactions": "8.4.3",
+    "@storybook/addon-onboarding": "8.4.3",
+    "@storybook/blocks": "8.4.3",
+    "@storybook/preset-create-react-app": "8.4.3",
+    "@storybook/react": "^8.4.3",
+    "@storybook/react-webpack5": "8.4.3",
+    "@storybook/test": "8.4.3",
+    "@types/storybook__react": "^5.2.1",
+    "@types/styled-components": "^5.1.34",
+    "eslint-plugin-storybook": "^0.11.0",
+    "prop-types": "15.8.1",
+    "storybook": "8.4.3",
+    "webpack": "5.96.1"
   }
 }
