--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
@@ -51,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "3.2.2",
     "@storybook/addon-essentials": "8.4.3",
     "@storybook/addon-interactions": "8.4.3",
@@ -60,11 +61,18 @@
     "@storybook/react": "^8.4.3",
     "@storybook/react-webpack5": "8.4.3",
     "@storybook/test": "8.4.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.34",
+    "babel-jest": "^29.7.0",
+    "cspell-dict-pt-br": "^1.1.1",
     "eslint-plugin-storybook": "^0.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "prop-types": "15.8.1",
     "storybook": "8.4.3",
+    "ts-jest": "^29.2.5",
     "webpack": "5.96.1"
   }
 }
